# mimir

./: .gitignore  CMakeLists.txt  README.md  mimir.pro  mimir.pro.user.4.8-pre1
mimir/: CMakeLists.txt  mimir  mimir.cpp  mimir.h  mimir.pro
mimir-test/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h  TestListener.cpp  TestListener.h  TestMatrix.cpp  TestMatrix.h  TestNeuron.cpp  TestNeuron.h  TestPatternFind.cpp  TestPatternFind.h  TestRunner.cpp  TestRunner.h  TestSerialize.cpp  TestSerialize.h  TestTrainer.cpp  TestTrainer.h  mimir-test.pro  test-runner.cpp  tst_Models.cpp  tst_Models.h
mimir/helpers/: AccumulateHelper.cpp  AccumulateHelper.h  activations.cpp  activations.h  helpers.cpp  helpers.h  math.cpp  math.h
mimir/models/: BatchItem.cpp  BatchItem.h  BayesNet.cpp  BayesNet.h  BayesNetFragment.cpp  BayesNetFragment.h  CPT.cpp  CPT.h  Edge.cpp  Edge.h  Evaluation.cpp  Evaluation.h  InterpolationStrategy.h  KeyValuePair.cpp  KeyValuePair.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NamedProbability.h  Net.cpp  Net.h  Network.cpp  Network.h  NetworkFragment.cpp  NetworkFragment.h  Neuron.cpp  Neuron.h  Probability.cpp  Probability.h  ProbabilityDistribution.cpp  ProbabilityDistribution.h  ProbabilityWithAPrioris.h  ProbabilityWithPriors.h  Sample.cpp  Sample.h  SampleStore.cpp  SampleStore.h  Sampler.cpp  Sampler.h  (+7 more)
mimir/services/: ActivationsManager.cpp  ActivationsManager.h  BayesCalculator.cpp  BayesCalculator.h  DataStore.cpp  DataStore.h  DependencyDetector.cpp  DependencyDetector.h  EvaluationCombiner.cpp  EvaluationCombiner.h  Evaluator.cpp  Evaluator.h  NameResolveSerializer.cpp  NameResolveSerializer.h  NameResolver.cpp  NameResolver.h  NeuronNet.cpp  NeuronNet.h  NeuronNetSerializer.cpp  (+9 more)
(+81 files in other folders)
